--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "vite-tsconfig-paths": "^4.3.2"
   },
   "devDependencies": {
