--- a/package.json
+++ b/package.json
@@ -32,17 +32,19 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
+    "postcss": "^8.4.38",
     "react": "^18.2.0",
+    "vite-tsconfig-paths": "^4.3.2",
+    "react-activity-calendar": "^2.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "vite-tsconfig-paths": "^4.3.2",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.3",
-    "autoprefixer": "^10.4.19"
+    "react-tooltip": "^5.26.3",
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
