--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,6 @@
     "declaration": true,
     "typeRoots": ["./dist/index.d.ts", "node_modules/@types"],
   },
-  "include": ["src", "./index.ts"],
+  "include": ["src", "./index.ts", "src/components/TopRatingHistogram/LeetcodeTopRatingHistogram/LeetcodeTopRatingHistogram.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
