--- a/package.json
+++ b/package.json
@@ -33,18 +33,14 @@
   "dependencies": {
     "@tanstack/react-query": "^5.29.2",
     "autoprefixer": "^10.4.19",
-    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "highcharts": "^11.4.1",
     "highcharts-react-official": "^3.2.1",
-    "postcss": "^8.4.38",
     "react": "^18.2.0",
-    "vite-tsconfig-paths": "^4.3.2",
     "react-activity-calendar": "^2.2.8",
     "react-dom": "^18.2.0",
     "react-icons": "^5.1.0",
-    "react-tooltip": "^5.26.3",
-    "tailwindcss": "^3.4.3"
+    "react-tooltip": "^5.26.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
@@ -58,6 +54,11 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-dts": "^3.8.3",
-    "vite-plugin-lib-inject-css": "^2.0.1"
+    "vite-plugin-lib-inject-css": "^2.0.1",
+    "axios": "^1.6.8",
+    "postcss": "^8.4.38",
+    "vite-tsconfig-paths": "^4.3.2",
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.3"
   }
 }
